[gd_scene load_steps=5 format=2]

[ext_resource path="res://Test_Player.gd" type="Script" id=1]
[ext_resource path="res://Save_Movement.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.1749, 31.6107 )

[node name="Test_Player" type="Node2D"]
script = ExtResource( 1 )
Save = ExtResource( 2 )

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="FallTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="timeout" from="JumpTimer" to="." method="_startfalling"]
[connection signal="timeout" from="FallTimer" to="." method="_stopfalling"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
